--- a/gb/ncid277_4.md
+++ b/gb/ncid277_4.md
@@ -1,4 +1,9 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="https://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="https://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/txyzum203/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/txyzum203/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/txyzum203/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/30/n11756102.md#1" target="_blank">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/30/n11756102.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/09/1709140247431758-150x120.jpg" align ="left"></a>中国外交部发言人耿爽的对外发言被外界认为千篇一律、套话连篇，以至于有网友根据一款“耿爽模拟器”便可获得他的外交辞令内容。不过，网友今日发现发现，该模拟器已被下架。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 3:59 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/30/n11756006.md#1" target="_blank">总统辩论会 蔡英文读港人来信：不要相信中共</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/30/n11756006.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/4c18dd8c429eb600747e4fe07ebd8649-150x120.jpg" align ="left"></a>在台湾的总统辩论会上，蔡英文读了香港一名青年的来信，呼吁台湾人“不要相信中共”。中共长期欺骗国人、国际社会的丑闻，再次被外界聚焦。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 3:57 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/30/n11755082.md#1" target="_blank">中共恐吓教师校长 港教育界将举行集会回击</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/30/n11755082.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1908170417372188-150x120.jpg" align ="left"></a>近日香港的教育局长杨润雄声称，如果学校不配合教育局调查有关教师在反修例运动中的所谓违法行为，校长将被取消资格。引起舆论极大反弹，被指散步新一轮白色恐布。香港教育界将于元月3日办集会抵御白色恐怖。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 3:26 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/30/n11755956.md#1" target="_blank">中共网控再升级  制作及转发视频要实名制</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/30/n11755956.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/04/GettyImages-691039068-150x120.jpg" align ="left"></a>近日，中共网信办等部门再通过法规，对网络视频、网络直播等节目的发布和传播加以限制和严控，包括对发布者要求“实名制”，利用身份信息认证。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 2:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/29/n11753824.md#1" target="_blank">中共推出密码法 被指窃取商业机密与财富</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/29/n11753824.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/security-2168234_1280-800x450-600x400-150x120.jpg" align ="left"></a>中共推出“密码法”，将于2020年1月1日起施行，引发各界的广泛担忧和谴责。专家分析认为，中共临近灭亡，频立恶法，是为了攫取网络信息和商业机密，以及窃取密码相关的财富。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 11:52 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/30/n11755722.md#1" target="_blank">传刘鹤本周末赴美签署第一阶段贸易协议</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/30/n11755722.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1180211245-1-150x120.jpg" align ="left"></a>《南华早报》援引知情人士透露，中共副总理刘鹤将于本周六（1月4日）率团前往华盛顿，预计签署第一阶段贸易协议。这将会在很大程度上为美中贸易战降温。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 11:27 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/30/n11755101.md#1" target="_blank">波特王向五毛小粉红喊话：民主自由可贵</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/30/n11755101.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/14be7aed9786d4aeffbdccbf7aaa1d86-150x120.png" align ="left"></a>网红“波特王”12月30日发布一支新影片，回复中共小粉红的留言强调民主自由的可贵，最后呼吁台湾民众一定要出门投票来守护台湾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 9:38 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/30/n11754189.md#1" target="_blank">【翻墙必看】中共就香港问题欺骗全世界</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/30/n11754189.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912240823462188-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
@@ -27,10 +32,6 @@
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/16/n11724729.md#1" target="_blank">大国竞争？美军火速打造超火力超射程武器</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/16/n11724729.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/TACM-1200x800-150x120.jpg" align ="left"></a>几十年来，美国的移动飞机场——航空母舰和各地空军基地一直代表着美国外交政策的实力。近年来，中俄积聚数百甚至数千英里射程的导弹系统造成新挑战，美军需要新型武器对抗这种新威胁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 3:54 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/28/n11751657.md#1" target="_blank">美学者：抵御中共长臂 捍卫校园言论自由</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/28/n11751657.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/02/1301262227271528-150x120.jpg" align ="left"></a>美国学者认为，美国各大学应率先抵抗中共侵犯美国利益的行为，采取行动维护校园言论自由。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 2:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/28/n11751566.md#1" target="_blank">中共两省军区政委突然被免全国人大代表资格</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/28/n11751566.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1401220857431944-150x120.jpg" align ="left"></a>中共两名少将——江苏省军区政委孟中康、海南省军区政委叶青，突然被免去中共全国人大代表职务。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 11:38 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/28/n11750767.md#1" target="_blank">擅闯美海军基地禁区拍照 中国男子被捕</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/28/n11750767.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/F-5N_VFC-111_NAS_Key_West-150x120.jpg" align ="left"></a>周四（12月26日），一名中国公民在佛罗里达州基韦斯特的美国海军基地禁区内拍照，被美国当局逮捕。去年12月，一名中国学生在同一地点拍摄建筑物和天线阵列照片被捕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 9:09 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/28/n11750485.md#1" target="_blank">红色资金介入大选 台查获最大两岸地下汇兑</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/28/n11750485.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-505204462-150x120.jpg" align ="left"></a>距离台湾2020年1月11日总统大选仅剩两周时间，地下选举赌盘热钱四处窜流，台湾当局为防范中共红色资金渗透而严密查缉，12月25日查获一博弈集团透过两岸地下汇兑记录高达139亿台币，约合4.6亿美元，创史上最高，检调单位怀疑与大选赌盘有关。台湾针对2020大选已进行四波查缉赌博行动，查获选举相关赌盘共计58起。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 6:49 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/28/n11750751.md#1" target="_blank">中共批台大开民主倒车 学者讥中国有民主？</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/28/n11750751.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/c369fca47693132d48911e39739a0252-150x120.jpg" align ="left"></a>中共国台办反对中华民国立法院通过“反渗透法”，还说这是“大开民主倒车”。对此，台湾师范大学政治学系教授范世平《反渗透法》12月27日嘲讽“中共这么关心台湾的民主？中国自己有民主吗？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 1:34 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/28/n11750707.md#1" target="_blank">传习近平不满北京官方 中南海收回规划权</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/28/n11750707.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1302060733482068-600x400-150x120.jpg" align ="left"></a>在中共官方最近一次涉及北京规划的会议上，中共办公厅主任丁薛祥首次以首规委主任的身份公开露面。这也显示中共明确北京规划权属中南海。有港媒解读认为，此举暗示中央对北京官方感到不满。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:34 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/30/n11754482.md#1" target="_blank">湖南“操场埋尸案” 原校长黄炳松获刑15年</a><br></h3>12月30日，陆媒报导，湖南怀化新晃县“操场埋尸案”10名相关公职人员分别被以徇私枉法罪、渎职罪判处7年至15年不等的有期徒刑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 5:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/29/n11752311.md#1" target="_blank">【翻墙必看】内蒙古公安警官开枪打死两官</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
 
@@ -41,6 +42,5 @@
 美国会参议院有望在快速解决弹劾总统川普（特朗普）案上达成第一步的共识；不过在具体审讯程序.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 9:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/28/n11751864.md#1" target="_blank">内蒙古公安警官枪杀两副局长 当局封口</a><br></h3>圣诞节当日，大陆内蒙古一森林公安局的警官突然枪击5名同事，致其中两名副局长身亡。中共公安部和内蒙古当局派人进驻当地调查，并全面封锁消息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 7:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/28/n11750592.md#1" target="_blank">【翻墙必看】中共到了最后解体的时刻？</a><br></h3>不久前，美国国际宗教自由委员会委员鲍尔说：“我们收到中共政府内乱和中国一些地区反对中共政权的报告。”鲍尔认为，中共的解体可能以非常快的速度发生。那么，中共真的到了最后解体的时刻吗？答案是肯定的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 9:30 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/28/n11751269.md#1" target="_blank">贪污逾千万元 内蒙古通辽政协高官获刑17年</a><br></h3>12月28日，中共内蒙古通辽市政协前副主席吴国林（副厅级）被判刑17年。其被指贪污逾千万元（人民币，下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 6:38 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/ncid277_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/ncid277_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/ncid277_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/ncid277_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/ncid277_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/ncid277_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/txyzum203/djy/blob/master/gb/ncid277_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/txyzum203/djy/blob/master/gb/ncid277_4.md#1<br><a href="https://github.com/txyzum203/djy/blob/master/gb/ncid277_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/txyzum203/djy/blob/master/gb/ncid277_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid277_4.htm">http://www.epochtimes.com/gb/ncid277_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
