--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/27/n11750092.md#1">【直播回放】逾103万港人元旦大游行</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/5/n11770292.md#1">苏州十全街发生大面积塌陷 店铺已搬空</a><br>
 <br><p><a href="https://github.com/txyzum203/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/7/n11773398.md#1">王友群：苏莱曼尼被斩首中共将如何动作</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11773300.md#1">文静：并非“上面政策是好的，下面执行搞坏了”</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11773235.md#1">【谈股论金】川普“以战止战”非长期利空</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11773166.md#1">项云：无视人性准则是中共党性决定的</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11770856.md#1">【名家专栏】美国应实行全国选民身份证吗？</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11770894.md#1">袁斌：中共删帖封号有多疯狂？</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11770624.md#1">东方觉：六岁孩子走六万步上学，令人心痛心酸</a><br>
-<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/5/n11770319.md#1">王友群：挪威图书馆风波背后的真相</a><br>
 <br><p><a href="https://github.com/txyzum203/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
@@ -92,7 +92,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,379,133 人
+- 共 349,382,910 人
 ```
 </strong>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
